# nnlearn

./: CMakeLists.txt  README.md  version.txt
boost/: CMakeLists.txt
boost/boost/config/: requires_threads.hpp
boost/tests/: test1.cpp
caffe_test/: CMakeLists.txt
caffe_test/3rd_test/: 3rd_test.cpp  CMakeLists.txt  boost_test.cpp  caffe_tmp.pb.cc  caffe_tmp.pb.h  gflags_test.cpp  glog_test.cpp  leveldb_test.cpp  ml.helloworld.pb.cc  ml.helloworld.pb.h  openblase_test.cpp  snappy_test.cpp
caffe_test/caffe/: CMakeLists.txt
caffe_test/caffe/cmake/: Dependencies.cmake
caffe_test/caffe_test/: CMakeLists.txt  Caffe_Test.cpp  funset.cpp  lenet-5.cpp  mnist.cpp
caffe_test/gflags/: CMakeLists.txt
caffe_test/hdf5/: CMakeLists.txt  H5pubconf.h
caffe_test/leveldb/: CMakeLists.txt
caffe_test/leveldb/port/: port_posix.h
caffe_test/lmdb/: mdb.c
caffe_test/protobuf/: CMakeLists.txt
caffe_test/protobuf/cmake/: install.cmake  libprotobuf.cmake  (+2 more)
caffe_test/snappy/: CMakeLists.txt
cimg_test/: CImgtest.cpp  CMakeLists.txt
cimg_test/examples/: CMakeLists.txt
code_test/: README.md
code_test/ffmpeg_test/: funset.cpp
code_test/libyuv_Test/: funset.cpp  funset.hpp
code_test/test_vlfeat/: funset.cpp  funset.hpp
code_test/vigra_test/: Vigra_Test.cpp
cximage702/: CxImageFull_vc10.sln
cximage702/CxImage/: cximage.vcxproj
cximage702/cximagetest/: ReadMe.txt  cximagetest.cpp  cximagetest.vcxproj  cximagetest.vcxproj.filters  funset.cpp  funset.h
cximage702/demo/: demo.aps  demo.vcxproj  demodll.vcxproj
cximage702/jasper/: jasper.vcxproj
cximage702/jbig/: jbig.vcxproj
cximage702/jpeg/: jpeg.vcxproj
cximage702/libpsd/: libpsd.vcxproj
cximage702/mng/: mng.vcxproj
cximage702/png/: png.vcxproj
cximage702/raw/: libdcr.vcxproj
cximage702/tiff/: tiff.vcxproj
cximage702/zlib/: zlib.vcxproj
dlib/: CMakeLists.txt
eigen_test/: CMakeLists.txt
eigen_test/demo/: TestEigen.cpp  common.hpp  funset.cpp  funset.hpp
ffmpeg_test/: CMakeLists.txt  FFmpeg_Test.cpp  funset.hpp  test_ffmpeg_libavfilter.cpp  test_ffmpeg_libavutil.cpp  test_ffmpeg_libswresample.cpp
gflags/: CMakeLists.txt
glog/: config.h
lept_test/: README.md  liblepttest.cpp
libsvm/: CMakeLists.txt
libyuv/: CMakeLists.txt  Libyuv_Test.cpp
mxnet_test/: CMakeLists.txt
mxnet_test/3rd_test/: CMakeLists.txt
mxnet_test/mxnet_test/: CMakeLists.txt
mxnet_test/openblas/: config.h
nn_test/: .gitignore  CMakeLists.txt  README.md  version.txt
nn_test/DatasetToImage/: CMakeLists.txt  DatasetToImaage.cpp  build.sh  funset.cpp  funset.hpp
nn_test/Math/: CMakeLists.txt  test_Math.cpp
nn_test/libnn/: BP.cpp  CNN.cpp  CNN.hpp  common.cpp  common.hpp  decision_tree.cpp  decision_tree.hpp  kmeans.hpp  linear_regression.cpp  logistic_regression.cpp  logistic_regression2.cpp  perceptron.cpp  single_hidden_layer.cpp  single_hidden_layer.hpp
nn_test/nn_test/: CMakeLists.txt  build.sh  funset.cpp  libsvm.cpp  pca.cpp  pca.hpp  test_NN.cpp
nn_test/src/: fstream.hpp
nn_test/tiny_cnn_test/: CMakeLists.txt  test_tiny-cnn.cpp
nn_test/tiny_dnn_test/: CMakeLists.txt  funset.cpp
openblas/: common.h  config.h
opencv24_test/: CMakeLists.txt  feature_point_matching.cpp  opencv24_test.hpp  opencv_test.cpp
opencv_test/: .gitignore  CMakeLists.txt  OpenCV_Test.cpp  build.sh  opencv_funset.hpp  test_core.cpp  test_dft.cpp  test_directory.cpp  test_erode.cpp  test_fbc_cv_all.cpp  test_morphologyEx.cpp  test_opencv_funset.cpp  test_remap.cpp  test_rotate.cpp  test_threshold.cpp  test_transpose.cpp  test_warpPerspective.cpp
opencv_test/cimg_test/: CImg_Test.cpp  funset.cpp  funset.hpp
opencv_test/fbc_cv/include/: dilate.hpp  erode.hpp  flip.hpp  imgproc.hpp  morph.hpp  resize.hpp  threshold.hpp  transpose.hpp  warpAffine.hpp  warpPerspective.hpp
opencv_test/fbc_cv/include/core/: Ptr.hpp  base.hpp  core.hpp  fast_math.hpp  fbcdef.hpp  fbcstd.hpp  invert.hpp  mathfuncs.hpp  matx.hpp  saturate.hpp  solve.hpp  types.hpp
opencv_test/fbc_cv/src/: core.cpp  fbcstd.cpp  hal.cpp  imgproc.cpp  imgwarp.cpp  precomp.hpp
opencv_test/ffmpeg_test/: build.sh  test_ffmpeg_libswscale.cpp  test_live555_rtsp_client.cpp
opencv_test/libyuv_Test/: Libyuv_Test.cpp
opencv_test/opencv_test/: CMakeLists.txt  OpenCV_Test.cpp  fbc_cv_funset.hpp  test_cvtColor.cpp  test_dilate.cpp  test_flip.cpp  test_merge.cpp  test_resize.cpp  test_rotate90.cpp  test_split.cpp  test_warpAffine.cpp
opencv_test/src/CImg/: README.txt
opencv_test/src/CImg/examples/: Makefile  odykill.cpp  radon_transform2d.cpp
opencv_test/src/fbc_cv/include/: cvtColor.hpp  dft.hpp  directory.hpp  filterengine.hpp  merge.hpp  morphologyEx.hpp  remap.hpp  rotate.hpp  split.hpp
opencv_test/src/fbc_cv/include/core/: NAryMatIterator.hpp  base.hpp  hal.hpp  interface.hpp  mat.hpp  rng.hpp  utility.hpp
opencv_test/src/fbc_cv/src/: arithm_core.hpp  directory.cpp  imgproc.cpp  types.cpp
opencv_test/test_vlfeat/: Test_VLFeat.cpp
opencv_test/vigra_test/: funset.cpp  funset.hpp
openface/: CMakeLists.txt  README.md  appveyor.yml  install.sh
simd_test/: CMakeLists.txt
simd_test/demo/: CMakeLists.txt  NEONvsSSE_5.h  aes.h  avx.h  mmx.h  neon.h  sse.h  sse2.h  sse3.h  sse41.h  sse42.h  ssse3.h  testSimd.cpp
simd_test/test/: Test.cpp  Test.h  TestAddFeatureDifference.cpp  TestAnyToAny.cpp  TestAnyToBayer.cpp  TestAnyToBgra.cpp  TestAnyToYuv.cpp  TestBackground.cpp  TestBayerToBgr.cpp  TestBayerToBgra.cpp  TestBgr48pToBgra32.cpp  TestBinarization.cpp  TestCheckC.c  TestCheckCpp.cpp  TestConditional.cpp  TestConfig.h  TestCopy.cpp  TestCrc32.cpp  TestData.cpp  TestData.h  TestDeinterleave.cpp  TestDifferenceSum.cpp  TestDrawing.cpp  TestEdgeBackground.cpp  TestFill.cpp  TestFilter.cpp  TestHistogram.cpp  TestHog.cpp  TestIntegral.cpp  TestInterference.cpp  TestOperation.cpp  TestPerformance.cpp  TestPerformance.h  TestReduceGray.cpp  TestReorder.cpp  TestResize.cpp  TestSegmentation.cpp  TestShift.cpp  TestSobel.cpp  TestStatistic.cpp  (+6 more)
snappy/: CMakeLists.txt
vigra/: Vigra_Test.cpp
vigra/config/: VigraAddTest.cmake
vlfeat/: Test_VLFeat.cpp
(+329 files in other folders)
